Entrega 5/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
Rule 2     addProcDir -> <empty>
Rule 3     addMainProc -> <empty>
Rule 4     programa_var_loop -> variable programa_var_loop
Rule 5     programa_var_loop -> <empty>
Rule 6     programa_func_loop -> funcion programa_func_loop
Rule 7     programa_func_loop -> <empty>
Rule 8     bloque -> LCURLY bloque_est_loop RCURLY
Rule 9     bloque_est_loop -> estatuto bloque_est_loop
Rule 10    bloque_est_loop -> <empty>
Rule 11    tipo -> INTTYPE
Rule 12    tipo -> FLOATTYPE
Rule 13    tipo -> CHARTYPE
Rule 14    tipo -> BOOLTYPE
Rule 15    tipo -> VOIDTYPE
Rule 16    subtipo -> INTTYPE
Rule 17    subtipo -> FLOATTYPE
Rule 18    estatuto -> asignacion
Rule 19    estatuto -> condicion
Rule 20    estatuto -> escritura
Rule 21    estatuto -> regreso
Rule 22    estatuto -> ciclo
Rule 23    regreso -> RETURN exp SEMICOLON
Rule 24    variable -> VAR variable_loop
Rule 25    variable_loop -> variable_id_loop SEMICOLON variable_end_loop
Rule 26    variable_loop -> variable_arr_loop SEMICOLON variable_end_loop
Rule 27    addType -> <empty>
Rule 28    variable_id_loop -> variable_id_loop_coma COLON tipo addType
Rule 29    variable_id_loop_coma -> ID addDirVarGlobales
Rule 30    variable_id_loop_coma -> ID addDirVarGlobales COMA variable_id_loop_coma
Rule 31    variable_arr_loop -> variable_arr_coma COLON subtipo addType
Rule 32    variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET
Rule 33    variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma
Rule 34    addDirVarGlobales -> <empty>
Rule 35    variable_end_loop -> variable_loop
Rule 36    variable_end_loop -> <empty>
Rule 37    expresion -> nuevaexp expresion_option expresion_loop
Rule 38    expresion_option -> AND nuevaexp
Rule 39    expresion_option -> OR nuevaexp
Rule 40    expresion_option -> <empty>
Rule 41    expresion_loop -> expresion
Rule 42    expresion_loop -> <empty>
Rule 43    nuevaexp -> exp nuevaexp_type
Rule 44    nuevaexp_type -> LESS exp
Rule 45    nuevaexp_type -> GREATER exp
Rule 46    nuevaexp_type -> LESSEQUAL exp
Rule 47    nuevaexp_type -> GREATEREQUAL exp
Rule 48    nuevaexp_type -> NOTEQUAL exp
Rule 49    nuevaexp_type -> EQUAL exp
Rule 50    nuevaexp_type -> <empty>
Rule 51    condicion -> IF LPARENTHESIS expresion RPARENTHESIS bloque condicion_option
Rule 52    condicion_option -> ELSE bloque
Rule 53    condicion_option -> <empty>
Rule 54    escritura -> PRINT LPARENTHESIS escritura_type RPARENTHESIS SEMICOLON
Rule 55    escritura_type -> expresion
Rule 56    escritura_type -> QUOTE CTECHAR QUOTE
Rule 57    ciclo -> WHILE LPARENTHESIS expresion RPARENTHESIS bloque
Rule 58    funcion -> tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque
Rule 59    addProcDirFunc -> <empty>
Rule 60    funcion_option -> argumentos
Rule 61    funcion_option -> <empty>
Rule 62    argumentos -> ID addDirVarGlobalesFunc COLON tipo addTypeFunc argumentos_loop
Rule 63    argumentos_loop -> COMA argumentos
Rule 64    argumentos_loop -> <empty>
Rule 65    addDirVarGlobalesFunc -> <empty>
Rule 66    addTypeFunc -> <empty>
Rule 67    asignacion -> ID asignacion_option
Rule 68    asignacion_option -> ASSIGN expresion nodo8 SEMICOLON
Rule 69    asignacion_option -> LBRACKET CTEINT RBRACKET ASSIGN nodo8 LBRACKET asignacion_type RBRACKET SEMICOLON
Rule 70    asignacion_type -> CTEINT
Rule 71    asignacion_type -> CTEFLOAT
Rule 72    asignacion_type -> CTEINT COMA asignacion_type
Rule 73    asignacion_type -> CTEFLOAT COMA asignacion_type
Rule 74    nodo8 -> <empty>
Rule 75    exp -> termino nodo5 exp_loop
Rule 76    exp_loop -> exp_type_loop
Rule 77    exp_loop -> <empty>
Rule 78    exp_type_loop -> ADDITION nodo3_suma exp
Rule 79    exp_type_loop -> SUBTRACTION nodo3_resta exp
Rule 80    nodo3_suma -> <empty>
Rule 81    nodo3_resta -> <empty>
Rule 82    nodo5 -> <empty>
Rule 83    termino -> factor nodo4 termino_loop
Rule 84    termino_loop -> termino_type_loop
Rule 85    termino_loop -> <empty>
Rule 86    termino_type_loop -> MULTIPLICATION nodo2_mult termino
Rule 87    termino_type_loop -> DIVISION nodo2_div termino
Rule 88    nodo2_mult -> <empty>
Rule 89    nodo2_div -> <empty>
Rule 90    nodo4 -> <empty>
Rule 91    factor -> factor_var
Rule 92    factor -> factor_exp
Rule 93    factor_var -> varcte nodo1
Rule 94    factor_exp -> LPARENTHESIS nodo6 expresion RPARENTHESIS nodo7
Rule 95    nodo1 -> <empty>
Rule 96    nodo6 -> <empty>
Rule 97    nodo7 -> <empty>
Rule 98    varcte -> ID varcte_arr
Rule 99    varcte -> CTEINT nodoCteE
Rule 100   varcte -> CTEFLOAT nodoCteF
Rule 101   varcte -> CTEBOOL nodoCteB
Rule 102   varcte -> CTECHAR nodoCteC
Rule 103   varcte_arr -> LBRACKET RBRACKET
Rule 104   varcte_arr -> <empty>
Rule 105   nodoCteE -> <empty>
Rule 106   nodoCteF -> <empty>
Rule 107   nodoCteB -> <empty>
Rule 108   nodoCteC -> <empty>

Terminals, with rules where they appear

ADDITION             : 78
AND                  : 38
ASSIGN               : 68 69
BOOLTYPE             : 14
CHARTYPE             : 13
COLON                : 28 31 62
COMA                 : 30 33 63 72 73
CTEBOOL              : 101
CTECHAR              : 56 102
CTEFLOAT             : 71 73 100
CTEINT               : 69 70 72 99
DIVISION             : 87
ELSE                 : 52
END                  : 1
EQUAL                : 49
FLOATTYPE            : 12 17
FUNC                 : 58
GREATER              : 45
GREATEREQUAL         : 47
ID                   : 1 29 30 32 33 58 62 67 98
IF                   : 51
INTTYPE              : 11 16
LBRACKET             : 32 33 69 69 103
LCURLY               : 8
LESS                 : 44
LESSEQUAL            : 46
LPARENTHESIS         : 1 51 54 57 58 94
MAIN                 : 1
MULTIPLICATION       : 86
NOTEQUAL             : 48
OR                   : 39
PRINT                : 54
PROGRAM              : 1
QUOTE                : 56 56
RBRACKET             : 32 33 69 69 103
RCURLY               : 8
RETURN               : 23
RPARENTHESIS         : 1 51 54 57 58 94
SEMICOLON            : 1 23 25 26 54 68 69
SUBTRACTION          : 79
VAR                  : 24
VOIDTYPE             : 15
WHILE                : 57
error                : 

Nonterminals, with rules where they appear

addDirVarGlobales    : 29 30 32 33
addDirVarGlobalesFunc : 62
addMainProc          : 1
addProcDir           : 1
addProcDirFunc       : 58
addType              : 28 31
addTypeFunc          : 62
argumentos           : 60 63
argumentos_loop      : 62
asignacion           : 18
asignacion_option    : 67
asignacion_type      : 69 72 73
bloque               : 1 51 52 57 58
bloque_est_loop      : 8 9
ciclo                : 22
condicion            : 19
condicion_option     : 51
escritura            : 20
escritura_type       : 54
estatuto             : 9
exp                  : 23 43 44 45 46 47 48 49 78 79
exp_loop             : 75
exp_type_loop        : 76
expresion            : 41 51 55 57 68 94
expresion_loop       : 37
expresion_option     : 37
factor               : 83
factor_exp           : 92
factor_var           : 91
funcion              : 6
funcion_option       : 58
nodo1                : 93
nodo2_div            : 87
nodo2_mult           : 86
nodo3_resta          : 79
nodo3_suma           : 78
nodo4                : 83
nodo5                : 75
nodo6                : 94
nodo7                : 94
nodo8                : 68 69
nodoCteB             : 101
nodoCteC             : 102
nodoCteE             : 99
nodoCteF             : 100
nuevaexp             : 37 38 39
nuevaexp_type        : 43
programa             : 0
programa_func_loop   : 1 6
programa_var_loop    : 1 4
regreso              : 21
subtipo              : 31
termino              : 75 86 87
termino_loop         : 83
termino_type_loop    : 84
tipo                 : 28 58 62
varcte               : 93
varcte_arr           : 98
variable             : 4
variable_arr_coma    : 31 33
variable_arr_loop    : 26
variable_end_loop    : 25 26
variable_id_loop     : 25
variable_id_loop_coma : 28 30
variable_loop        : 24 35

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (4) programa_var_loop -> . variable programa_var_loop
    (5) programa_var_loop -> .
    (24) variable -> . VAR variable_loop

    INTTYPE         reduce using rule 5 (programa_var_loop -> .)
    FLOATTYPE       reduce using rule 5 (programa_var_loop -> .)
    CHARTYPE        reduce using rule 5 (programa_var_loop -> .)
    BOOLTYPE        reduce using rule 5 (programa_var_loop -> .)
    VOIDTYPE        reduce using rule 5 (programa_var_loop -> .)
    MAIN            reduce using rule 5 (programa_var_loop -> .)
    VAR             shift and go to state 5

    programa_var_loop              shift and go to state 6
    variable                       shift and go to state 7

state 5

    (24) variable -> VAR . variable_loop
    (25) variable_loop -> . variable_id_loop SEMICOLON variable_end_loop
    (26) variable_loop -> . variable_arr_loop SEMICOLON variable_end_loop
    (28) variable_id_loop -> . variable_id_loop_coma COLON tipo addType
    (31) variable_arr_loop -> . variable_arr_coma COLON subtipo addType
    (29) variable_id_loop_coma -> . ID addDirVarGlobales
    (30) variable_id_loop_coma -> . ID addDirVarGlobales COMA variable_id_loop_coma
    (32) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET
    (33) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma

    ID              shift and go to state 13

    variable_arr_loop              shift and go to state 8
    variable_id_loop_coma          shift and go to state 9
    variable_id_loop               shift and go to state 10
    variable_arr_coma              shift and go to state 11
    variable_loop                  shift and go to state 12

state 6

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop . programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (6) programa_func_loop -> . funcion programa_func_loop
    (7) programa_func_loop -> .
    (58) funcion -> . tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque
    (11) tipo -> . INTTYPE
    (12) tipo -> . FLOATTYPE
    (13) tipo -> . CHARTYPE
    (14) tipo -> . BOOLTYPE
    (15) tipo -> . VOIDTYPE

    MAIN            reduce using rule 7 (programa_func_loop -> .)
    INTTYPE         shift and go to state 19
    FLOATTYPE       shift and go to state 17
    CHARTYPE        shift and go to state 21
    BOOLTYPE        shift and go to state 16
    VOIDTYPE        shift and go to state 20

    tipo                           shift and go to state 14
    programa_func_loop             shift and go to state 18
    funcion                        shift and go to state 15

state 7

    (4) programa_var_loop -> variable . programa_var_loop
    (4) programa_var_loop -> . variable programa_var_loop
    (5) programa_var_loop -> .
    (24) variable -> . VAR variable_loop

    INTTYPE         reduce using rule 5 (programa_var_loop -> .)
    FLOATTYPE       reduce using rule 5 (programa_var_loop -> .)
    CHARTYPE        reduce using rule 5 (programa_var_loop -> .)
    BOOLTYPE        reduce using rule 5 (programa_var_loop -> .)
    VOIDTYPE        reduce using rule 5 (programa_var_loop -> .)
    MAIN            reduce using rule 5 (programa_var_loop -> .)
    VAR             shift and go to state 5

    variable                       shift and go to state 7
    programa_var_loop              shift and go to state 22

state 8

    (26) variable_loop -> variable_arr_loop . SEMICOLON variable_end_loop

    SEMICOLON       shift and go to state 23


state 9

    (28) variable_id_loop -> variable_id_loop_coma . COLON tipo addType

    COLON           shift and go to state 24


state 10

    (25) variable_loop -> variable_id_loop . SEMICOLON variable_end_loop

    SEMICOLON       shift and go to state 25


state 11

    (31) variable_arr_loop -> variable_arr_coma . COLON subtipo addType

    COLON           shift and go to state 26


state 12

    (24) variable -> VAR variable_loop .

    VAR             reduce using rule 24 (variable -> VAR variable_loop .)
    INTTYPE         reduce using rule 24 (variable -> VAR variable_loop .)
    FLOATTYPE       reduce using rule 24 (variable -> VAR variable_loop .)
    CHARTYPE        reduce using rule 24 (variable -> VAR variable_loop .)
    BOOLTYPE        reduce using rule 24 (variable -> VAR variable_loop .)
    VOIDTYPE        reduce using rule 24 (variable -> VAR variable_loop .)
    MAIN            reduce using rule 24 (variable -> VAR variable_loop .)


state 13

    (29) variable_id_loop_coma -> ID . addDirVarGlobales
    (30) variable_id_loop_coma -> ID . addDirVarGlobales COMA variable_id_loop_coma
    (32) variable_arr_coma -> ID . addDirVarGlobales LBRACKET RBRACKET
    (33) variable_arr_coma -> ID . addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma
    (34) addDirVarGlobales -> .

    COMA            reduce using rule 34 (addDirVarGlobales -> .)
    LBRACKET        reduce using rule 34 (addDirVarGlobales -> .)
    COLON           reduce using rule 34 (addDirVarGlobales -> .)

    addDirVarGlobales              shift and go to state 27

state 14

    (58) funcion -> tipo . FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque

    FUNC            shift and go to state 28


state 15

    (6) programa_func_loop -> funcion . programa_func_loop
    (6) programa_func_loop -> . funcion programa_func_loop
    (7) programa_func_loop -> .
    (58) funcion -> . tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque
    (11) tipo -> . INTTYPE
    (12) tipo -> . FLOATTYPE
    (13) tipo -> . CHARTYPE
    (14) tipo -> . BOOLTYPE
    (15) tipo -> . VOIDTYPE

    MAIN            reduce using rule 7 (programa_func_loop -> .)
    INTTYPE         shift and go to state 19
    FLOATTYPE       shift and go to state 17
    CHARTYPE        shift and go to state 21
    BOOLTYPE        shift and go to state 16
    VOIDTYPE        shift and go to state 20

    tipo                           shift and go to state 14
    programa_func_loop             shift and go to state 29
    funcion                        shift and go to state 15

state 16

    (14) tipo -> BOOLTYPE .

    SEMICOLON       reduce using rule 14 (tipo -> BOOLTYPE .)
    FUNC            reduce using rule 14 (tipo -> BOOLTYPE .)
    COMA            reduce using rule 14 (tipo -> BOOLTYPE .)
    RPARENTHESIS    reduce using rule 14 (tipo -> BOOLTYPE .)


state 17

    (12) tipo -> FLOATTYPE .

    SEMICOLON       reduce using rule 12 (tipo -> FLOATTYPE .)
    FUNC            reduce using rule 12 (tipo -> FLOATTYPE .)
    COMA            reduce using rule 12 (tipo -> FLOATTYPE .)
    RPARENTHESIS    reduce using rule 12 (tipo -> FLOATTYPE .)


state 18

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop . addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (2) addProcDir -> .

    MAIN            reduce using rule 2 (addProcDir -> .)

    addProcDir                     shift and go to state 30

state 19

    (11) tipo -> INTTYPE .

    SEMICOLON       reduce using rule 11 (tipo -> INTTYPE .)
    FUNC            reduce using rule 11 (tipo -> INTTYPE .)
    COMA            reduce using rule 11 (tipo -> INTTYPE .)
    RPARENTHESIS    reduce using rule 11 (tipo -> INTTYPE .)


state 20

    (15) tipo -> VOIDTYPE .

    SEMICOLON       reduce using rule 15 (tipo -> VOIDTYPE .)
    FUNC            reduce using rule 15 (tipo -> VOIDTYPE .)
    COMA            reduce using rule 15 (tipo -> VOIDTYPE .)
    RPARENTHESIS    reduce using rule 15 (tipo -> VOIDTYPE .)


state 21

    (13) tipo -> CHARTYPE .

    SEMICOLON       reduce using rule 13 (tipo -> CHARTYPE .)
    FUNC            reduce using rule 13 (tipo -> CHARTYPE .)
    COMA            reduce using rule 13 (tipo -> CHARTYPE .)
    RPARENTHESIS    reduce using rule 13 (tipo -> CHARTYPE .)


state 22

    (4) programa_var_loop -> variable programa_var_loop .

    INTTYPE         reduce using rule 4 (programa_var_loop -> variable programa_var_loop .)
    FLOATTYPE       reduce using rule 4 (programa_var_loop -> variable programa_var_loop .)
    CHARTYPE        reduce using rule 4 (programa_var_loop -> variable programa_var_loop .)
    BOOLTYPE        reduce using rule 4 (programa_var_loop -> variable programa_var_loop .)
    VOIDTYPE        reduce using rule 4 (programa_var_loop -> variable programa_var_loop .)
    MAIN            reduce using rule 4 (programa_var_loop -> variable programa_var_loop .)


state 23

    (26) variable_loop -> variable_arr_loop SEMICOLON . variable_end_loop
    (35) variable_end_loop -> . variable_loop
    (36) variable_end_loop -> .
    (25) variable_loop -> . variable_id_loop SEMICOLON variable_end_loop
    (26) variable_loop -> . variable_arr_loop SEMICOLON variable_end_loop
    (28) variable_id_loop -> . variable_id_loop_coma COLON tipo addType
    (31) variable_arr_loop -> . variable_arr_coma COLON subtipo addType
    (29) variable_id_loop_coma -> . ID addDirVarGlobales
    (30) variable_id_loop_coma -> . ID addDirVarGlobales COMA variable_id_loop_coma
    (32) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET
    (33) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma

    VAR             reduce using rule 36 (variable_end_loop -> .)
    INTTYPE         reduce using rule 36 (variable_end_loop -> .)
    FLOATTYPE       reduce using rule 36 (variable_end_loop -> .)
    CHARTYPE        reduce using rule 36 (variable_end_loop -> .)
    BOOLTYPE        reduce using rule 36 (variable_end_loop -> .)
    VOIDTYPE        reduce using rule 36 (variable_end_loop -> .)
    MAIN            reduce using rule 36 (variable_end_loop -> .)
    ID              shift and go to state 13

    variable_arr_loop              shift and go to state 8
    variable_id_loop_coma          shift and go to state 9
    variable_id_loop               shift and go to state 10
    variable_end_loop              shift and go to state 31
    variable_arr_coma              shift and go to state 11
    variable_loop                  shift and go to state 32

state 24

    (28) variable_id_loop -> variable_id_loop_coma COLON . tipo addType
    (11) tipo -> . INTTYPE
    (12) tipo -> . FLOATTYPE
    (13) tipo -> . CHARTYPE
    (14) tipo -> . BOOLTYPE
    (15) tipo -> . VOIDTYPE

    INTTYPE         shift and go to state 19
    FLOATTYPE       shift and go to state 17
    CHARTYPE        shift and go to state 21
    BOOLTYPE        shift and go to state 16
    VOIDTYPE        shift and go to state 20

    tipo                           shift and go to state 33

state 25

    (25) variable_loop -> variable_id_loop SEMICOLON . variable_end_loop
    (35) variable_end_loop -> . variable_loop
    (36) variable_end_loop -> .
    (25) variable_loop -> . variable_id_loop SEMICOLON variable_end_loop
    (26) variable_loop -> . variable_arr_loop SEMICOLON variable_end_loop
    (28) variable_id_loop -> . variable_id_loop_coma COLON tipo addType
    (31) variable_arr_loop -> . variable_arr_coma COLON subtipo addType
    (29) variable_id_loop_coma -> . ID addDirVarGlobales
    (30) variable_id_loop_coma -> . ID addDirVarGlobales COMA variable_id_loop_coma
    (32) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET
    (33) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma

    VAR             reduce using rule 36 (variable_end_loop -> .)
    INTTYPE         reduce using rule 36 (variable_end_loop -> .)
    FLOATTYPE       reduce using rule 36 (variable_end_loop -> .)
    CHARTYPE        reduce using rule 36 (variable_end_loop -> .)
    BOOLTYPE        reduce using rule 36 (variable_end_loop -> .)
    VOIDTYPE        reduce using rule 36 (variable_end_loop -> .)
    MAIN            reduce using rule 36 (variable_end_loop -> .)
    ID              shift and go to state 13

    variable_arr_loop              shift and go to state 8
    variable_id_loop_coma          shift and go to state 9
    variable_id_loop               shift and go to state 10
    variable_end_loop              shift and go to state 34
    variable_arr_coma              shift and go to state 11
    variable_loop                  shift and go to state 32

state 26

    (31) variable_arr_loop -> variable_arr_coma COLON . subtipo addType
    (16) subtipo -> . INTTYPE
    (17) subtipo -> . FLOATTYPE

    INTTYPE         shift and go to state 35
    FLOATTYPE       shift and go to state 36

    subtipo                        shift and go to state 37

state 27

    (29) variable_id_loop_coma -> ID addDirVarGlobales .
    (30) variable_id_loop_coma -> ID addDirVarGlobales . COMA variable_id_loop_coma
    (32) variable_arr_coma -> ID addDirVarGlobales . LBRACKET RBRACKET
    (33) variable_arr_coma -> ID addDirVarGlobales . LBRACKET RBRACKET COMA variable_arr_coma

    COLON           reduce using rule 29 (variable_id_loop_coma -> ID addDirVarGlobales .)
    COMA            shift and go to state 39
    LBRACKET        shift and go to state 38


state 28

    (58) funcion -> tipo FUNC . ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque

    ID              shift and go to state 40


state 29

    (6) programa_func_loop -> funcion programa_func_loop .

    MAIN            reduce using rule 6 (programa_func_loop -> funcion programa_func_loop .)


state 30

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir . MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    MAIN            shift and go to state 41


state 31

    (26) variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .

    VAR             reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    INTTYPE         reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    FLOATTYPE       reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    CHARTYPE        reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    BOOLTYPE        reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    VOIDTYPE        reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    MAIN            reduce using rule 26 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)


state 32

    (35) variable_end_loop -> variable_loop .

    VAR             reduce using rule 35 (variable_end_loop -> variable_loop .)
    INTTYPE         reduce using rule 35 (variable_end_loop -> variable_loop .)
    FLOATTYPE       reduce using rule 35 (variable_end_loop -> variable_loop .)
    CHARTYPE        reduce using rule 35 (variable_end_loop -> variable_loop .)
    BOOLTYPE        reduce using rule 35 (variable_end_loop -> variable_loop .)
    VOIDTYPE        reduce using rule 35 (variable_end_loop -> variable_loop .)
    MAIN            reduce using rule 35 (variable_end_loop -> variable_loop .)


state 33

    (28) variable_id_loop -> variable_id_loop_coma COLON tipo . addType
    (27) addType -> .

    SEMICOLON       reduce using rule 27 (addType -> .)

    addType                        shift and go to state 42

state 34

    (25) variable_loop -> variable_id_loop SEMICOLON variable_end_loop .

    VAR             reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    INTTYPE         reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    FLOATTYPE       reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    CHARTYPE        reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    BOOLTYPE        reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    VOIDTYPE        reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    MAIN            reduce using rule 25 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)


state 35

    (16) subtipo -> INTTYPE .

    SEMICOLON       reduce using rule 16 (subtipo -> INTTYPE .)


state 36

    (17) subtipo -> FLOATTYPE .

    SEMICOLON       reduce using rule 17 (subtipo -> FLOATTYPE .)


state 37

    (31) variable_arr_loop -> variable_arr_coma COLON subtipo . addType
    (27) addType -> .

    SEMICOLON       reduce using rule 27 (addType -> .)

    addType                        shift and go to state 43

state 38

    (32) variable_arr_coma -> ID addDirVarGlobales LBRACKET . RBRACKET
    (33) variable_arr_coma -> ID addDirVarGlobales LBRACKET . RBRACKET COMA variable_arr_coma

    RBRACKET        shift and go to state 44


state 39

    (30) variable_id_loop_coma -> ID addDirVarGlobales COMA . variable_id_loop_coma
    (29) variable_id_loop_coma -> . ID addDirVarGlobales
    (30) variable_id_loop_coma -> . ID addDirVarGlobales COMA variable_id_loop_coma

    ID              shift and go to state 45

    variable_id_loop_coma          shift and go to state 46

state 40

    (58) funcion -> tipo FUNC ID . LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque

    LPARENTHESIS    shift and go to state 47


state 41

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN . addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (3) addMainProc -> .

    LPARENTHESIS    reduce using rule 3 (addMainProc -> .)

    addMainProc                    shift and go to state 48

state 42

    (28) variable_id_loop -> variable_id_loop_coma COLON tipo addType .

    SEMICOLON       reduce using rule 28 (variable_id_loop -> variable_id_loop_coma COLON tipo addType .)


state 43

    (31) variable_arr_loop -> variable_arr_coma COLON subtipo addType .

    SEMICOLON       reduce using rule 31 (variable_arr_loop -> variable_arr_coma COLON subtipo addType .)


state 44

    (32) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET .
    (33) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET . COMA variable_arr_coma

    COLON           reduce using rule 32 (variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET .)
    COMA            shift and go to state 49


state 45

    (29) variable_id_loop_coma -> ID . addDirVarGlobales
    (30) variable_id_loop_coma -> ID . addDirVarGlobales COMA variable_id_loop_coma
    (34) addDirVarGlobales -> .

    COMA            reduce using rule 34 (addDirVarGlobales -> .)
    COLON           reduce using rule 34 (addDirVarGlobales -> .)

    addDirVarGlobales              shift and go to state 50

state 46

    (30) variable_id_loop_coma -> ID addDirVarGlobales COMA variable_id_loop_coma .

    COLON           reduce using rule 30 (variable_id_loop_coma -> ID addDirVarGlobales COMA variable_id_loop_coma .)


state 47

    (58) funcion -> tipo FUNC ID LPARENTHESIS . funcion_option RPARENTHESIS addProcDirFunc bloque
    (60) funcion_option -> . argumentos
    (61) funcion_option -> .
    (62) argumentos -> . ID addDirVarGlobalesFunc COLON tipo addTypeFunc argumentos_loop

    RPARENTHESIS    reduce using rule 61 (funcion_option -> .)
    ID              shift and go to state 53

    funcion_option                 shift and go to state 51
    argumentos                     shift and go to state 52

state 48

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc . LPARENTHESIS RPARENTHESIS bloque END

    LPARENTHESIS    shift and go to state 54


state 49

    (33) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET COMA . variable_arr_coma
    (32) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET
    (33) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma

    ID              shift and go to state 56

    variable_arr_coma              shift and go to state 55

state 50

    (29) variable_id_loop_coma -> ID addDirVarGlobales .
    (30) variable_id_loop_coma -> ID addDirVarGlobales . COMA variable_id_loop_coma

    COLON           reduce using rule 29 (variable_id_loop_coma -> ID addDirVarGlobales .)
    COMA            shift and go to state 39


state 51

    (58) funcion -> tipo FUNC ID LPARENTHESIS funcion_option . RPARENTHESIS addProcDirFunc bloque

    RPARENTHESIS    shift and go to state 57


state 52

    (60) funcion_option -> argumentos .

    RPARENTHESIS    reduce using rule 60 (funcion_option -> argumentos .)


state 53

    (62) argumentos -> ID . addDirVarGlobalesFunc COLON tipo addTypeFunc argumentos_loop
    (65) addDirVarGlobalesFunc -> .

    COLON           reduce using rule 65 (addDirVarGlobalesFunc -> .)

    addDirVarGlobalesFunc          shift and go to state 58

state 54

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS . RPARENTHESIS bloque END

    RPARENTHESIS    shift and go to state 59


state 55

    (33) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma .

    COLON           reduce using rule 33 (variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma .)


state 56

    (32) variable_arr_coma -> ID . addDirVarGlobales LBRACKET RBRACKET
    (33) variable_arr_coma -> ID . addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma
    (34) addDirVarGlobales -> .

    LBRACKET        reduce using rule 34 (addDirVarGlobales -> .)

    addDirVarGlobales              shift and go to state 60

state 57

    (58) funcion -> tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS . addProcDirFunc bloque
    (59) addProcDirFunc -> .

    LCURLY          reduce using rule 59 (addProcDirFunc -> .)

    addProcDirFunc                 shift and go to state 61

state 58

    (62) argumentos -> ID addDirVarGlobalesFunc . COLON tipo addTypeFunc argumentos_loop

    COLON           shift and go to state 62


state 59

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS . bloque END
    (8) bloque -> . LCURLY bloque_est_loop RCURLY

    LCURLY          shift and go to state 63

    bloque                         shift and go to state 64

state 60

    (32) variable_arr_coma -> ID addDirVarGlobales . LBRACKET RBRACKET
    (33) variable_arr_coma -> ID addDirVarGlobales . LBRACKET RBRACKET COMA variable_arr_coma

    LBRACKET        shift and go to state 38


state 61
